<resources>
    <string name="app_name">"Trip Vault"</string>
    <string name="trip_vault">Trip Vault</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="user_agreement">User Agreement</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_location">Ottawa, ON</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="photos">Photos</string>
    <string name="trips">Trips</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="go_to_page">Go to Page</string>
    <string name="oh_no_nothing_is_here">Oh no! Nothing is Here</string>
    <string name="search">Search</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">close</string>
    <string name="profile_tittle">Profile</string>
    <string name="dashboard">DashBoard</string>
    <string name="photos_title">Photos</string>
    <string name="recent_trips">Recent Trips</string>
    <string name="locations">Locations</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="edit_account">Edit Account</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="image_picture">Image Picture</string>
    <string name="profile_UserName">Username </string>
    <string name="profile_name">Profile Name</string>
    <string name="SignUpCity">City</string>
    <string name="confirm_password">Confirm password</string>
    <string name="upload_pictures"> Pictures...</string>
    <string name="notes">Notes...</string>
    <string name="choose_date">Choose Date</string>
    <string name="tripTittle"> Summer 2020</string>
    <string name="trip_Info">Add Trip...</string>
    <string name="trip_location">Barcelona, London,...</string>
    <string name="accomodation">Blue house by the lake.</string>
    <string name="cancel_trip">Cancel</string>
    <string name="save_trip">Save</string>
    <string name="upload_attachments">Files</string>
    <string name="agree_to_terms_and_conditions">Agree to terms and conditions</string>
    <string name="mm_dd_yy">MM/DD/YY</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="sign_up">Sign Up</string>
</resources>
