<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/header_bg"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="115dp"
        android:src="@drawable/user2"
        android:contentDescription="@string/image_picture" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/profile_UserName"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
      />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/textView"
       />
</LinearLayout>