<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tripdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/trip_Info"
                android:textColor="#FFCC80"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/app_color_accent"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/triptittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/poppins_regular"
                    android:hint="@string/tripTittle"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/app_color_accent"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/triplocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/poppins_regular"
                    android:hint="@string/trip_location"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/app_color_accent"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hotelbooking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/accomodation"
                     android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/app_color_accent"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Notes"
                    android:padding="10dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/dateoftrip"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                    android:backgroundTint="@android:color/background_light"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/choose_date"
                    android:textColorHint="@color/app_main_color"
                    app:backgroundTint="@color/app_main_color" />

                <TextView
                    android:id="@+id/selectedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@android:color/background_light"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/mm_dd_yy"
                    android:padding="12dp"
                    android:textColorHint="@color/app_main_color"
                    android:textColor="@color/app_main_color"
                    app:backgroundTint="@color/app_main_color" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/tripPictures"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/upload_pictures"
                    android:textColorHint="@color/app_main_color"
                    app:backgroundTint="@color/my_app_color_on_surface"
                    app:icon="@drawable/baseline_insert_photo_black_18dp"
                    app:iconGravity="start"
                    app:strokeColor="@color/app_main_color"
                    app:strokeWidth="1.2dp" />

                <Button
                    android:id="@+id/tripFiles"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="20dp"

                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/upload_attachments"
                    android:textColorHint="@color/app_main_color"
                    app:backgroundTint="@color/my_app_color_on_surface"
                    app:icon="@drawable/baseline_attachment_black_18dp"
                    app:iconGravity="start"
                    app:strokeColor="@color/app_main_color"
                    app:strokeWidth="1.2dp" />
            </RelativeLayout>
            <Button
                android:id="@+id/savetrip"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="12dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/save_trip"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                android:textColorHint="@color/colorAccent"
                app:backgroundTint="@color/app_main_color" />
            <Button
                android:id="@+id/cancelsaveTrip"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cornerRadius="10dp"
                 android:elevation="12dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/cancel_trip"
                app:backgroundTint="@color/app_color_accent"
                android:textColorHint="@color/app_main_color"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>