<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fontFamily="@font/poppins_regular"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:gravity="center"
    android:background="@drawable/profilebg"
    tools:context=".UI.userProfile">

    <TextView
        android:id="@+id/App_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/authem"
        android:padding="25dp"
        android:text="@string/trip_vault"
        android:textAlignment="center"
        android:textColor="@color/app_main_color"
        android:textSize="40sp" />

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/my_app_color_on_surface"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <!-- Card contents. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userProImage"
                android:layout_width="365dp"
                android:layout_height="300dp"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/welcomeInfos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/app_main_color"
                android:textSize="23sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:elevation="3dp"
                    android:padding="5dp"
                    android:src="@drawable/location"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/userlocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_italic"
                    android:hint="@string/user_location"
                    android:padding="5dp"
                    android:textColorHint="@color/app_main_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/photos"
                    android:textColorHint="@color/colorAccent2"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/trips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/trips"
                    android:paddingStart="15dp"
                    android:textAlignment="textEnd"
                    android:textColorHint="@color/colorAccent2"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/savedPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="322"
                    android:textColorHint="@color/my_app_color_on_secondary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/savedTrips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="45"
                    android:paddingStart="50dp"
                    android:textAlignment="textEnd"
                    android:textColorHint="@color/my_app_color_on_secondary"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--    <com.google.android.material.card.MaterialCardView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="374dp"-->
    <!--        android:layout_marginTop="-70dp"-->
    <!--        app:cardBackgroundColor="@android:color/white"-->
    <!--        app:rippleColor="@color/colorPrimary"-->
    <!--        app:strokeColor="@color/colorPrimary"-->
    <!--        tools:ignore="MissingConstraints">-->




    <!--    </com.google.android.material.card.MaterialCardView>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/editProfile"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10sp"
            android:text="@string/edit_profile"
            android:textColor="@color/app_main_color"
            app:strokeColor="@color/app_main_color" />
        <Button
            android:id="@+id/go_to_page"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/go_to_page"
            android:padding="10dp"
            android:textColor="@color/app_main_color"
            app:strokeColor="@color/app_main_color" />


    </LinearLayout>

    <Button
        android:id="@+id/delete_Profile"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:padding="10dp"
        android:text="@string/delete_profile"
        android:textColor="@color/app_main_color" />
</LinearLayout>